--- a/firebase.json
+++ b/firebase.json
@@ -12,7 +12,7 @@
     "rewrites": [
       {
         "source": "/**",
-        "destination": "/landing-page.html"
+        "destination": "/index.html"
       }
     ]
   }
